force-app/main/default/objects/Product2/fields/ActiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveStartDate__c</fullName>
    <label>有効開始日</label>
    <type>Date</type>
</CustomField>