force-app/main/default/objects/Product2/fields/AvaliableForDemo__c.field-meta.xml
<CustomField>
    <fullName>AvaliableForDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avaliable for Demo</label>
    <type>Checkbox</type>
</CustomField>