force-app/main/default/objects/Product2/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <inlineHelpText>標準納期</inlineHelpText>
    <label>b</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>