force-app/main/default/objects/Product2/fields/CAS_Specification__c.field-meta.xml
<CustomField>
    <fullName>CAS_Specification__c</fullName>
    <description>CAS用項目</description>
    <label>仕様</label>
    <length>40</length>
    <type>Text</type>
</CustomField>