force-app/main/default/objects/Product2/fields/CAS_SupplierName__c.field-meta.xml
<CustomField>
    <fullName>CAS_SupplierName__c</fullName>
    <description>CAS用項目</description>
    <label>仕入先名称</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>那珂医用</fullName>
            </value>
            <value>
                <fullName>HFD</fullName>
            </value>
            <value>
                <fullName>HHS</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>東洋紡</fullName>
            </value>
            <value>
                <fullName>オルガノ</fullName>
            </value>
            <value>
                <fullName>東京部品/他</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>