force-app/main/default/objects/Product2/fields/ClassicAttachment__c.field-meta.xml
<CustomField>
    <fullName>ClassicAttachment__c</fullName>
    <label>Classic Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>