force-app/main/default/objects/Product2/fields/ClassicAttachmentDate__c.field-meta.xml
<CustomField>
    <fullName>ClassicAttachmentDate__c</fullName>
    <label>Classic Attachment Date</label>
    <type>DateTime</type>
</CustomField>