force-app/main/default/objects/Product2/fields/ClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCode__c</fullName>
    <description>CAS用項目</description>
    <label>分類コード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>