force-app/main/default/objects/Product2/fields/Consumable_PMD__c.field-meta.xml
<CustomField>
    <fullName>Consumable_PMD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumable PMD</label>
    <type>Checkbox</type>
</CustomField>