force-app/main/default/objects/Product2/fields/ContentAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>ContentAttachmentId__c</fullName>
    <label>Content Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>