force-app/main/default/objects/Product2/fields/ContentDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentDate__c</fullName>
    <label>Content Document Date</label>
    <type>DateTime</type>
</CustomField>