force-app/main/default/objects/Product2/fields/ContentId__c.field-meta.xml
<CustomField>
    <fullName>ContentId__c</fullName>
    <label>Content Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>