force-app/main/default/objects/Product2/fields/ContentPublicUrl__c.field-meta.xml
<CustomField>
    <fullName>ContentPublicUrl__c</fullName>
    <label>Content Public Url</label>
    <type>Url</type>
</CustomField>