force-app/main/default/objects/Product2/fields/ContentURL__c.field-meta.xml
<CustomField>
    <fullName>ContentURL__c</fullName>
    <label>Content URL</label>
    <type>Url</type>
</CustomField>