force-app/main/default/objects/Product2/fields/CostOfGoodsSold__c.field-meta.xml
<CustomField>
    <fullName>CostOfGoodsSold__c</fullName>
    <description>The Cost of Goods sold per each 1 qty for this mateiral</description>
    <inlineHelpText>The Cost of Goods sold per each 1 qty for this mateiral</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>