force-app/main/default/objects/Product2/fields/CountryMode__c.field-meta.xml
<CustomField>
    <fullName>CountryMode__c</fullName>
    <label>国モード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>