force-app/main/default/objects/Product2/fields/ExternalColKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalColKey__c</fullName>
    <description>パーツNo、国コードの連結値を保持する項目。</description>
    <externalId>true</externalId>
    <label>外部連携キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>