force-app/main/default/objects/Product2/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External ID, used for import. Not to be confused with the standard field, that is used for when connecting an external object.</inlineHelpText>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>