force-app/main/default/objects/Product2/fields/hanbaisaki__c.field-meta.xml
<CustomField>
    <fullName>hanbaisaki__c</fullName>
    <label>販売先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>