force-app/main/default/objects/Product2/fields/HHS_ItemDivision__c.field-meta.xml
<CustomField>
    <fullName>HHS_ItemDivision__c</fullName>
    <label>製品区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductFamily</valueSetName>
    </valueSet>
</CustomField>