force-app/main/default/objects/Product2/fields/HHS_Katashiki1__c.field-meta.xml
<CustomField>
    <fullName>HHS_Katashiki1__c</fullName>
    <label>型式1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HHS_ItemDivision__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HHS_Model_Product</valueSetName>
    </valueSet>
</CustomField>