force-app/main/default/objects/Product2/fields/HHS_SuetsukechouseihiFlag__c.field-meta.xml
<CustomField>
    <fullName>HHS_SuetsukechouseihiFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>据付調整費フラグ</label>
    <type>Checkbox</type>
</CustomField>