force-app/main/default/objects/Product2/fields/HHT_Code__c.field-meta.xml
<CustomField>
    <fullName>HHT_Code__c</fullName>
    <inlineHelpText>Code used for ordering from HHT</inlineHelpText>
    <label>HHT Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>