force-app/main/default/objects/Product2/fields/HHT_Ordering_Code__c.field-meta.xml
<CustomField>
    <fullName>HHT_Ordering_Code__c</fullName>
    <formula>&quot;N-&quot;+ ProductCode +&quot;-&quot;+ HHT_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ordering code for HHT products. &quot;N-&quot; plus the Part Number + HHT Code</inlineHelpText>
    <label>HHT Ordering Code</label>
    <type>Text</type>
</CustomField>