force-app/main/default/objects/Product2/fields/ImportDate__c.field-meta.xml
<CustomField>
    <fullName>ImportDate__c</fullName>
    <inlineHelpText>The date when the data was imported</inlineHelpText>
    <label>Import Date</label>
    <type>Date</type>
</CustomField>