force-app/main/default/objects/Product2/fields/ImportSource__c.field-meta.xml
<CustomField>
    <fullName>ImportSource__c</fullName>
    <inlineHelpText>Source of the imported data</inlineHelpText>
    <label>Import Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>