force-app/main/default/objects/Product2/fields/Installation_Warranty_product__c.field-meta.xml
<CustomField>
    <fullName>Installation_Warranty_product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an installation and warranty cost ?</description>
    <inlineHelpText>Is this an installation and warranty cost ?</inlineHelpText>
    <label>Installation&amp;Warranty_product</label>
    <type>Checkbox</type>
</CustomField>