force-app/main/default/objects/Product2/fields/isInstallationRequired__c.field-meta.xml
<CustomField>
    <fullName>isInstallationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a material that requires an installation when sold</description>
    <inlineHelpText>Checked if this is a material that requires an installation when sold</inlineHelpText>
    <label>Installation Required</label>
    <type>Checkbox</type>
</CustomField>