force-app/main/default/objects/Product2/fields/isNonStock__c.field-meta.xml
<CustomField>
    <fullName>isNonStock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the material is excluded from stock calculations (ie Labour, Travel expenses etc)</description>
    <inlineHelpText>Check this if the material is excluded from stock calculations (ie Labour, Travel expenses etc)</inlineHelpText>
    <label>Non Stock Material</label>
    <type>Checkbox</type>
</CustomField>