force-app/main/default/objects/Product2/fields/isSAPMaterial__c.field-meta.xml
<CustomField>
    <fullName>isSAPMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this Material is from SAP and should not have certain fields changed</description>
    <inlineHelpText>Checked if this Material is from SAP and should not have certain fields changed</inlineHelpText>
    <label>SAP Material</label>
    <type>Checkbox</type>
</CustomField>