force-app/main/default/objects/Product2/fields/IsUsedByHTE__c.field-meta.xml
<CustomField>
    <fullName>IsUsedByHTE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked if this product is used by HTE.
Initially used for selecting Service products</inlineHelpText>
    <label>Used by HTE</label>
    <type>Checkbox</type>
</CustomField>