force-app/main/default/objects/Product2/fields/ItemDivision__c.field-meta.xml
<CustomField>
    <fullName>ItemDivision__c</fullName>
    <label>製品区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>acano</fullName>
            </value>
            <value>
                <fullName>Aver</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>Compunetix</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP</fullName>
            </value>
            <value>
                <fullName>EZ会議</fullName>
            </value>
            <value>
                <fullName>FE-TEM</fullName>
            </value>
            <value>
                <fullName>Gatan</fullName>
            </value>
            <value>
                <fullName>LifesizeUVC</fullName>
            </value>
            <value>
                <fullName>Lifesizeその他</fullName>
            </value>
            <value>
                <fullName>Lifesize端末</fullName>
            </value>
            <value>
                <fullName>FE-SEM</fullName>
            </value>
            <value>
                <fullName>Hi-SEM</fullName>
            </value>
            <value>
                <fullName>Miniscope</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>周辺</fullName>
            </value>
            <value>
                <fullName>その他_EDX</fullName>
            </value>
            <value>
                <fullName>TEM</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>FIB</fullName>
            </value>
            <value>
                <fullName>部品</fullName>
            </value>
            <value>
                <fullName>HHS_FIB</fullName>
            </value>
            <value>
                <fullName>HHS_SPM</fullName>
            </value>
            <value>
                <fullName>HHS_WI</fullName>
            </value>
            <value>
                <fullName>HHS_その他</fullName>
            </value>
            <value>
                <fullName>商社品</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>SPM/WI/TOF-SIMS</fullName>
            </value>
            <value>
                <fullName>保守</fullName>
            </value>
            <value>
                <fullName>①Ｍ２Ｍ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>