force-app/main/default/objects/Product2/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <label>製品名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>