force-app/main/default/objects/Product2/fields/Katashiki__c.field-meta.xml
<CustomField>
    <fullName>Katashiki__c</fullName>
    <description>(補足)
型式の接頭辞として、以下の名前が付く場合は、案件製品一括編集画面で自由入力商品を選択した際の選択リストに表示される。

自社部品
HHS
商社品</description>
    <label>型式</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ItemDivision__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SU9000</fullName>
            </value>
            <value>
                <fullName>SU8240(Regulus)</fullName>
            </value>
            <value>
                <fullName>SU8230(Regulus)</fullName>
            </value>
            <value>
                <fullName>SU8220(Regulus)</fullName>
            </value>
            <value>
                <fullName>SU8100</fullName>
            </value>
            <value>
                <fullName>SU8240</fullName>
            </value>
            <value>
                <fullName>SU8230</fullName>
            </value>
            <value>
                <fullName>SU8220</fullName>
            </value>
            <value>
                <fullName>SU8010</fullName>
            </value>
            <value>
                <fullName>SU5000</fullName>
            </value>
            <value>
                <fullName>SU-70</fullName>
            </value>
            <value>
                <fullName>SU7000</fullName>
            </value>
            <value>
                <fullName>SU3500(5MD)</fullName>
            </value>
            <value>
                <fullName>SU3500(4MD)</fullName>
            </value>
            <value>
                <fullName>S-3700N</fullName>
            </value>
            <value>
                <fullName>SU1510</fullName>
            </value>
            <value>
                <fullName>FlexSEM1000</fullName>
            </value>
            <value>
                <fullName>FlexSEM1000Ⅱ</fullName>
            </value>
            <value>
                <fullName>SU3900</fullName>
            </value>
            <value>
                <fullName>SU3800</fullName>
            </value>
            <value>
                <fullName>IM4000</fullName>
            </value>
            <value>
                <fullName>冷却付 IM4000</fullName>
            </value>
            <value>
                <fullName>IM4000PLUS</fullName>
            </value>
            <value>
                <fullName>冷却付 IM4000PLUS</fullName>
            </value>
            <value>
                <fullName>IM5000</fullName>
            </value>
            <value>
                <fullName>冷却付 IM5000</fullName>
            </value>
            <value>
                <fullName>MC1000</fullName>
            </value>
            <value>
                <fullName>TM3030</fullName>
            </value>
            <value>
                <fullName>TM3030Plus</fullName>
            </value>
            <value>
                <fullName>TM4000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>