force-app/main/default/objects/Product2/fields/Lead_time__c.field-meta.xml
<CustomField>
    <fullName>Lead_time__c</fullName>
    <defaultValue>90</defaultValue>
    <description>What is the expected lead time in days ? (production+shipment+installation time)</description>
    <inlineHelpText>What is the expected lead time in days ? (production+shipment+installation time)</inlineHelpText>
    <label>Lead time (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>