force-app/main/default/objects/Product2/fields/LegacyDocHistory__c.field-meta.xml
<CustomField>
    <fullName>LegacyDocHistory__c</fullName>
    <inlineHelpText>Change History from Lotus Notes</inlineHelpText>
    <label>Legacy DocHistory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>