force-app/main/default/objects/Product2/fields/MainProduct__c.field-meta.xml
<CustomField>
    <fullName>MainProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Product</label>
    <type>Checkbox</type>
</CustomField>