force-app/main/default/objects/Product2/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <description>CAS用項目</description>
    <label>メーカ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>