force-app/main/default/objects/Product2/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <inlineHelpText>原価</inlineHelpText>
    <label>MC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>