force-app/main/default/objects/Product2/fields/OrderInformation__c.field-meta.xml
<CustomField>
    <fullName>OrderInformation__c</fullName>
    <label>Order Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>