force-app/main/default/objects/Product2/fields/PartitionPrice__c.field-meta.xml
<CustomField>
    <fullName>PartitionPrice__c</fullName>
    <label>仕切り価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>