force-app/main/default/objects/Product2/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <description>This field is a duplicate of Part Number(API Product Code) and is maintained for older processes. Develop for ProductCode, as this field should be removed.</description>
    <inlineHelpText>This field is a duplicate of Part Number(API Product Code) and is maintained for older processes. Develop for ProductCode, as this field should be removed.</inlineHelpText>
    <label>PartNumber</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>