force-app/main/default/objects/Product2/fields/PowerSupply_Hz__c.field-meta.xml
<CustomField>
    <fullName>PowerSupply_Hz__c</fullName>
    <label>電源仕様 (Hz)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>