force-app/main/default/objects/Product2/fields/PowerSupply_V__c.field-meta.xml
<CustomField>
    <fullName>PowerSupply_V__c</fullName>
    <label>電源仕様 (V)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>