force-app/main/default/objects/Product2/fields/Pricebook2Section__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Section__c</fullName>
    <label>価格表区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricebook2Section</valueSetName>
    </valueSet>
</CustomField>