force-app/main/default/objects/Product2/fields/ProductClassification__c.field-meta.xml
<CustomField>
    <fullName>ProductClassification__c</fullName>
    <description>CAS用項目</description>
    <label>製品分類</label>
    <length>40</length>
    <type>Text</type>
</CustomField>