force-app/main/default/objects/Product2/fields/ProductFlg__c.field-meta.xml
<CustomField>
    <fullName>ProductFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>本体フラグ</label>
    <type>Checkbox</type>
</CustomField>