force-app/main/default/objects/Product2/fields/ProductIdForReport__c.field-meta.xml
<CustomField>
    <fullName>ProductIdForReport__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>製品ID (レポート用)</label>
    <type>Text</type>
</CustomField>