force-app/main/default/objects/Product2/fields/ProductImage__c.field-meta.xml
<CustomField>
    <fullName>ProductImage__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; &amp; ContentAttachmentId__c &amp; &quot;&amp;operationContext=CHATTER&amp;contentId=&quot; &amp; ContentId__c, &apos;img&apos;,100,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>