force-app/main/default/objects/Product2/fields/productPattern__c.field-meta.xml
<CustomField>
    <fullName>productPattern__c</fullName>
    <label>パターン(群)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>