force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Spare Part</fullName>
                <default>true</default>
                <label>Spare Part</label>
            </value>
            <value>
                <fullName>Exchange Part</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
            <value>
                <fullName>Labour</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>