force-app/main/default/objects/Product2/fields/PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>PurchasePrice__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>