force-app/main/default/objects/Product2/fields/Q__c.field-meta.xml
<CustomField>
    <fullName>Q__c</fullName>
    <inlineHelpText>仕切り価格</inlineHelpText>
    <label>Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>