force-app/main/default/objects/Product2/fields/SAP_Parts_code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Parts_code__c</fullName>
    <label>SAP Parts code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>