force-app/main/default/objects/Product2/fields/SapCode__c.field-meta.xml
<CustomField>
    <fullName>SapCode__c</fullName>
    <label>SAP_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>