force-app/main/default/objects/Product2/fields/SAPItemType__c.field-meta.xml
<CustomField>
    <fullName>SAPItemType__c</fullName>
    <description>The SAP Item Type for use in GSS Integrations</description>
    <inlineHelpText>The SAP Item Type for use in GSS Integrations</inlineHelpText>
    <label>SAP Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAPItemType</valueSetName>
    </valueSet>
</CustomField>