force-app/main/default/objects/Product2/fields/SAWO_Constitution__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Constitution__c</fullName>
    <description>製品の構成</description>
    <label>構成</label>
    <length>255</length>
    <type>Text</type>
</CustomField>