force-app/main/default/objects/Product2/fields/SAWO_FirstHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_FirstHierarchy__c</fullName>
    <label>第一階層</label>
    <length>100</length>
    <type>Text</type>
</CustomField>