force-app/main/default/objects/Product2/fields/SAWO_LocalParts__c.field-meta.xml
<CustomField>
    <fullName>SAWO_LocalParts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>現地調達品</label>
    <type>Checkbox</type>
</CustomField>