force-app/main/default/objects/Product2/fields/SAWO_NoDiscountFlg__c.field-meta.xml
<CustomField>
    <fullName>SAWO_NoDiscountFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>値引対象外フラグ</label>
    <type>Checkbox</type>
</CustomField>