force-app/main/default/objects/Product2/fields/SAWO_OrderItems__c.field-meta.xml
<CustomField>
    <fullName>SAWO_OrderItems__c</fullName>
    <label>受注項目</label>
    <length>100</length>
    <type>Text</type>
</CustomField>