force-app/main/default/objects/Product2/fields/SAWO_OrderNnumber__c.field-meta.xml
<CustomField>
    <fullName>SAWO_OrderNnumber__c</fullName>
    <label>受注項番</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>