force-app/main/default/objects/Product2/fields/SAWO_Plant__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Plant__c</fullName>
    <label>プラント</label>
    <length>10</length>
    <type>Text</type>
</CustomField>