force-app/main/default/objects/Product2/fields/SAWO_ProductCreator__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductCreator__c</fullName>
    <description>自社品/他社品を区別する選択リスト</description>
    <label>自社品/他社品</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01：自社品</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02：他社品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>