force-app/main/default/objects/Product2/fields/SAWO_ProductEnglishName__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductEnglishName__c</fullName>
    <description>英語の商品名</description>
    <label>商品名（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>