force-app/main/default/objects/Product2/fields/SAWO_ProductText__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductText__c</fullName>
    <description>製品を詳細に示すテキスト</description>
    <label>製品テキスト</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>