force-app/main/default/objects/Product2/fields/SAWO_ProfitCenter_MTE__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProfitCenter_MTE__c</fullName>
    <label>利益センタ(MTE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>