force-app/main/default/objects/Product2/fields/SAWO_SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SalesUnit__c</fullName>
    <label>販売単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>%O</fullName>
            </value>
            <value>
                <fullName>°F</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>22S</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>ACR</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>bbl</fullName>
            </value>
            <value>
                <fullName>bft</fullName>
            </value>
            <value>
                <fullName>bgl</fullName>
            </value>
            <value>
                <fullName>BQK</fullName>
            </value>
            <value>
                <fullName>Bqm</fullName>
            </value>
            <value>
                <fullName>bsc</fullName>
            </value>
            <value>
                <fullName>btl</fullName>
            </value>
            <value>
                <fullName>BTU</fullName>
            </value>
            <value>
                <fullName>BYr</fullName>
            </value>
            <value>
                <fullName>C3S</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CCK</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CD3</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>