force-app/main/default/objects/Product2/fields/SAWO_SecondHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SecondHierarchy__c</fullName>
    <label>第二階層</label>
    <length>100</length>
    <type>Text</type>
</CustomField>