force-app/main/default/objects/Product2/fields/SAWO_ThirdHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ThirdHierarchy__c</fullName>
    <label>第三階層</label>
    <length>100</length>
    <type>Text</type>
</CustomField>